Closed
Bug 220692
Opened 22 years ago
Closed 22 years ago
Syntax error in /js/src/xpconnect/xpcmodule.cpp if MOZ_JSLOADER not defined
Categories
(Core :: XPConnect, defect)
Core
XPConnect
Tracking
()
VERIFIED
FIXED
People
(Reporter: ericb, Assigned: dbradley)
References
Details
Attachments
(1 file)
|
1.95 KB,
patch
|
timeless
:
review+
brendan
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.5a) Gecko/20030728 Mozilla Firebird/0.6.1
Build Identifier:
/js/src/xpconnect/xpcmodule.cpp, line 85 ends with a comma. This is OK if
MOZ_JSLOADER is defined, but if it isn't, there is an extra comma which causes
the compiler to cough. see DIFF below, comma should be inside #ifdef block.
85c85
< {nsnull, XPCVARIANT_CID, XPCVARIANT_CONTRACTID,
nsnull, nsnull, nsnull, nsnull, NS_CI_INTERFACE_GETTER_NAME(XPCVariant), nsnull
, &NS_CLASSINFO_NAME(XPCVariant)},
---
> {nsnull, XPCVARIANT_CID, XPCVARIANT_CONTRACTID,
nsnull, nsnull, nsnull, nsnull, NS_CI_INTERFACE_GETTER_NAME(XPCVariant), nsnull
, &NS_CLASSINFO_NAME(XPCVariant)}
89c89
< { "JS component loader", MOZJSCOMPONENTLOADER_CID,
---
> ,{ "JS component loader", MOZJSCOMPONENTLOADER_CID,
Reproducible: Always
Steps to Reproduce:
Use MozillaFirebird-source-0.6.1.tar. Make sure MOZ_JSLOADER is not defined.
Possibly fixed in latest CVS--I did not check.
| Assignee | ||
Comment 1•22 years ago
|
||
Oh, hmm, you're right.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Summary: Syntax error in /js/src/xpconnect/xpcmodule.cpp if MOZ_JSLOADER not defined → Syntax error in /js/src/xpconnect/xpcmodule.cpp if MOZ_JSLOADER not defined
| Assignee | ||
Comment 2•22 years ago
|
||
Moves all the commas in the #ifdef's. Oddly enough I think VC++ lets this pass.
I know it does for enum's.
Comment on attachment 132376 [details] [diff] [review]
Move the commas
brendan loves braces and commas
Attachment #132376 -
Flags: superreview?(brendan)
Attachment #132376 -
Flags: review+
Comment 4•22 years ago
|
||
Comment on attachment 132376 [details] [diff] [review]
Move the commas
Ugly. It would look slightly better to unindent the ,{ one space, so the first
initializer within the inner braces starts in the same column as those on the
overflow lines.
Fix that and sr=me.
/be
Attachment #132376 -
Flags: superreview?(brendan) → superreview+
| Assignee | ||
Comment 5•22 years ago
|
||
Patch checked in
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 7•22 years ago
|
||
*** Bug 223487 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•